--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,90 +635,66 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
-/* Image */
+/* Image Styles */
 
-	.image {
-		border-radius: 4px;
-		border: 0;
-		display: inline-block;
-		position: relative;
-	}
+.image {
+    border-radius: 4px;
+    position: relative;
+}
 
-		.image:before {
-			pointer-events: none;
-			background-image: url("../../images/overlay.png");
-			background-color: rgba(19, 21, 25, 0.5);
-			border-radius: 4px;
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			opacity: 0.5;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
+.image img {
+    border-radius: 4px;
+    display: block;
+    width: 100%; /* Ensure images take the full width of their container */
+    height: auto; /* Maintain aspect ratio */
+}
 
-		.image img {
-			border-radius: 4px;
-			display: block;
-		}
+/* Left-aligned Images */
+.image.left {
+    float: left;
+    max-width: 40%;
+    margin: 0 1.5em 1em 0;
+}
 
-		.image.left, .image.right {
-			max-width: 40%;
-		}
+/* Right-aligned Images */
+.image.right {
+    float: right;
+    max-width: 40%;
+    margin: 0 0 1em 1.5em;
+}
 
-			.image.left img, .image.right img {
-				width: 100%;
-			}
+/* Fit Images */
+.image.fit {
+    display: block;
+    margin: 0 0 2rem 0;
+    width: 100%;
+}
 
-		.image.left {
-			float: left;
-			padding: 0 1.5em 1em 0;
-			top: 0.25em;
-		}
+/* Main Images (Banner Style) */
+.image.main {
+    display: block;
+    margin: 2rem auto; /* Center the image and add vertical spacing */
+    width: 100%; /* Match the container width */
+    max-width: 800px; /* Match the text box width */
+    height: 300px; /* Fixed height to create a consistent banner look */
+    overflow: hidden; /* Ensure content outside the image bounds is hidden */
+}
 
-		.image.right {
-			float: right;
-			padding: 0 0 1em 1.5em;
-			top: 0.25em;
-		}
+.image.main img {
+    width: 100%; /* Ensure the image scales to the container's width */
+    height: 100%; /* Scale image to fit the fixed height */
+    object-fit: cover; /* Crop the image to maintain the banner appearance */
+}
 
-		.image.fit {
-			display: block;
-			margin: 0 0 2rem 0;
-			width: 100%;
-		}
 
-			.image.fit img {
-				width: 100%;
-			}
+@media screen and (max-width: 480px) {
+    .image.main {
+        margin: 1.5rem auto;
+        width: 100%; /* Full width for very small screens */
+    }
+}
 
-		.image.main {
-			display: block;
-			margin: 2.5rem 0;
-			width: 100%;
-		}
 
-			.image.main img {
-				width: 100%;
-			}
-
-		@media screen and (max-width: 736px) {
-
-			.image.main {
-				margin: 2rem 0;
-			}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.image.main {
-				margin: 1.5rem 0;
-			}
-
-		}
 
 /* List */
 
