--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1636,28 +1636,33 @@ body.is-preload #bg:before {
 			opacity: 0;
 		}
 
-		/* --- Responsive Nav Wrapping Fix --- */
+/* --- Responsive Nav Wrapping Fix (place at the very end of main.css) --- */
 #header nav ul {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	gap: 0.75em;
-	list-style: none;
-	padding: 0;
-	margin: 0;
-  }
-  
-  #header nav ul li {
-	margin: 0;
-  }
-  
-  #header nav ul li a {
-	display: block;
-	padding: 0.75em 1.25em;
-	border: solid 1px rgba(255, 255, 255, 0.25);
-	font-size: 0.8em;
-	letter-spacing: 0.2em;
-	text-transform: uppercase;
-	text-align: center;
-	white-space: nowrap;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.75em;
+  list-style: none;
+  padding: 0;
+  margin: 0 auto;
+}
+
+#header nav ul li {
+  border-left: none !important;
+  padding: 0.25em 0;
+  margin: 0;
+}
+
+#header nav ul li a {
+  display: block;
+  min-width: unset;
+  height: auto;
+  padding: 0.6em 1.25em;
+  line-height: 1.5;
+  font-size: 0.75rem;
+  white-space: nowrap;
+  border: solid 1px rgba(255, 255, 255, 0.25);
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 0.2em;
+}
