--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1247,7 +1247,7 @@ body.is-preload #bg:before {
 			margin-top: 3.5rem;
 		}
 
-			#header > *:before {
+			/* #header > *:before {
 				content: '';
 				display: block;
 				position: absolute;
@@ -1256,7 +1256,7 @@ body.is-preload #bg:before {
 				width: 1px;
 				height: calc(3.5rem + 1px);
 				background: #ffffff;
-			}
+			} */
 
 		#header > :first-child {
 			margin-top: 0;
