--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1349,7 +1349,7 @@ body.is-preload #bg:before {
 						background-color: rgba(255, 255, 255, 0.175);
 					}
 
-		#header nav.use-middle:after {
+		/* #header nav.use-middle:after {
 			content: '';
 			display: block;
 			position: absolute;
@@ -1358,7 +1358,7 @@ body.is-preload #bg:before {
 			width: 1px;
 			height: 100%;
 			background: #ffffff;
-		}
+		} */
 
 		#header nav.use-middle ul li.is-middle {
 			border-left: 0;
