Fixed middle bar on home page

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1247,7 +1247,7 @@ body.is-preload #bg:before {
 			margin-top: 3.5rem;
 		}
 
-			/* #header > *:before {
+			#header > *:before {
 				content: '';
 				display: block;
 				position: absolute;
@@ -1256,7 +1256,7 @@ body.is-preload #bg:before {
 				width: 1px;
 				height: calc(3.5rem + 1px);
 				background: #ffffff;
-			} */
+			}
 
 		#header > :first-child {
 			margin-top: 0;
@@ -1349,7 +1349,7 @@ body.is-preload #bg:before {
 						background-color: rgba(255, 255, 255, 0.175);
 					}
 
-		/* #header nav.use-middle:after {
+		#header nav.use-middle:after {
 			content: '';
 			display: block;
 			position: absolute;
@@ -1358,7 +1358,7 @@ body.is-preload #bg:before {
 			width: 1px;
 			height: 100%;
 			background: #ffffff;
-		} */
+		}
 
 		#header nav.use-middle ul li.is-middle {
 			border-left: 0;
